deploy_nexus3_stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nexus
  namespace: devops-tools
  labels:
    app: nexus-server
spec:
  selector:
    matchLabels:
      app: nexus-server
  serviceName: nexus-server
  replicas: 1
  template:
    metadata:
      labels:
        app: nexus-server
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3:latest
          resources:
            limits:
              memory: "4Gi"
              cpu: "4000m"
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8081
            - containerPort: 8123 # for docker registry
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-pvc
