service_nexus.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: devops-tools
  labels:
      app: nexus-server
spec:
  selector:
    app: nexus-server
  ports:
    - name: http-main
      port: 8081
      targetPort: 8081
    - name: http-docker-rep
      port: 8123
      targetPort: 8123
