nexus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
  name: nexus-ingress
  namespace: devops-tools
spec:
  rules:
    - host: nexus.local
      http:
        paths:
          - backend:
              serviceName: nexus-service
              servicePort: 8081
            path: /
